# manga-reader

./: .gitignore  README.md  README_en.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/backend/: main.py  ocr.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js
frontend/nginx/: nginx.conf
frontend/src/: App.tsx
frontend/src/tsx/: Bbox.tsx  ImageOpenDialog.tsx  Main.tsx  MangaDraw.tsx  NoMangaScreen.tsx  TextSideBar.tsx
